--- a/views/login.hbs
+++ b/views/login.hbs
@@ -29,7 +29,7 @@
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="Home">Home</a></li>
+                    <li><a href="index">Home</a></li>
                     <li><a href="login">Login</a></li>
                     <li><a href="register">SignUp</a></li>
                     <li><a href="contact">Contact</a></li>
