--- a/views/login.hbs
+++ b/views/login.hbs
@@ -35,7 +35,7 @@
                     <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
-            <img src="image/menu.png" class="menu-icon" onclick="menutoggle()">
+            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
     <!-------------------------ACCOUNT PAGE------------------------------------>
