--- a/views/register.hbs
+++ b/views/register.hbs
@@ -35,7 +35,7 @@
                     <li><a href="register">SignUp</a></li>
 
                 </ul>
-                <img src="image/menu.png" class="menu-icon" onclick="menutoggle()">
+                <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
     <!-------------------------ACCOUNT PAGE------------------------------------>
